# licc

./: Cargo.toml  README.md
crates/c_ast/: Cargo.toml
crates/c_ast/src/: lib.rs
crates/c_parser/: Cargo.toml
crates/c_parser/src/: ast.rs  lib.rs  parse_expression.rs  parse_function_declaration.rs  parse_statement.rs  parse_top_level_statement.rs  parse_type.rs  tokenizer.rs
crates/c_preprocessor/: Cargo.toml
crates/c_preprocessor/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/ir/: Cargo.toml
crates/ir/src/: lib.rs
examples/: print.c
